# ordi

./: .env.sample  .gitignore  README.md  Taskfile.yml  improvement_plan.md  infocom.md  pyproject.toml  related_works.md  research_plan.md
algorithms/: __init__.py  base.py  baselines.py  direct_downlink.py  ordi.py
data/: celestrak_planet.tle  firms_VIIRS_SNPP_NRT_2026-06-01_1d.csv
ordi/: main.py
ordi/algorithms/: __init__.py  _common.py  cocoi_like.py  compression_only.py  direct_downlink.py  full_replication.py  greedy_nonredundant.py  ilp_reference.py  local_knowledge.py  onboard_only.py  ordi.py  random_replication.py  replanning.py  schema.py  seco_adapted.py  seco_like.py  serval_like.py
ordi/baselines/: baselines.py
ordi/eval/: experiments.py  (+7 more)
paper/: .gitignore  README.md  main.tex  references.bib
results/: E1_core.csv  E1_core_raw.csv  E1_core_stats.csv  E2_fault_intensity.csv  E2_fault_types.csv  E3_correlated.csv  E3_fault_intensity.csv  E4_scalability.csv  E5_deadline.csv  E6_lambda_R.csv  E7_correlated.csv  E8_ilp_gap.csv  E9_backup_cap.csv  REAL.csv  oracle_gap.csv  state_model_fit.csv  stochastic_oracle_gap.csv
tests/: test_algorithm_schema.py  test_decision_validation.py  test_e1_metrics.py  test_eval_workload.py  test_local_knowledge.py  test_messaging.py  test_model_regressions.py  test_native_baseline_messaging.py  test_oracle.py  test_ordi_sharding.py  test_placement_optimization.py  test_seco_adapted.py  test_skyfield_contacts.py  test_state_model_fit.py  test_state_transition.py  test_stochastic_oracle.py  test_temporal_reliability.py
(+26 files in other folders)
