[project]
name = "pdp-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "brahe>=1.5.2",
    "highspy>=1.14.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pulp>=3.3.2",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "simpy>=4.1.2",
    "skyfield>=1.54",
    "tqdm>=4.67.3",
]
