[project]
name = "pdp-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "bsk==2.11.0",
    "bsk-rl==1.3.1",
    "highspy>=1.14.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pulp>=3.3.2",
    "pymupdf>=1.27.2.3",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "skyfield>=1.54",
    "tqdm>=4.67.3",
]
